# nba-betting

./: .gitignore  ARCHITECTURE.md  NBA betting system.md  USAGE.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: snapshot-odds.yml
data/odds_snapshots/: .gitkeep  2026-04-19.jsonl  2026-04-20.jsonl  2026-04-21.jsonl  2026-04-22.jsonl  2026-04-23.jsonl  2026-04-24.jsonl  2026-04-25.jsonl  2026-04-26.jsonl  2026-04-27.jsonl  2026-04-28.jsonl  2026-04-29.jsonl  2026-04-30.jsonl  2026-05-01.jsonl  2026-05-02.jsonl  2026-05-03.jsonl  2026-05-04.jsonl  2026-05-05.jsonl
frontend/: index.html
nba_betting/: __main__.py  cli.py  config.py
nba_betting/api/: app.py  routes.py
nba_betting/betting/: backtest.py  edge.py  explanations.py  kelly.py  montecarlo.py  portfolio.py  recommendations.py  shrinkage.py  tracker.py
nba_betting/data/: espn.py  espn_odds.py  injuries.py  lineups.py  nba_stats.py  odds_tracker.py  player_stats.py  polymarket.py  snapshot_jsonl.py
nba_betting/db/: models.py  session.py
nba_betting/display/: console.py
nba_betting/features/: builder.py  four_factors.py  player_impact.py  rest_days.py  rolling.py
nba_betting/models/: calibration.py  drivers.py  elo.py  ensemble.py  spreads_totals.py  stacking.py  xgboost_model.py
tests/: test_improvements.py  test_montecarlo.py  test_new_features.py  test_snapshot_jsonl.py  test_tier_improvements.py
