[project]
name = "nba-betting"
version = "0.2.0"
description = "NBA game prediction and Polymarket betting system with Elo + GBM ensemble"
requires-python = ">=3.9"
dependencies = [
    "nba_api>=1.4",
    "requests>=2.31",
    "pandas>=1.5",
    "numpy>=1.21",
    "scikit-learn>=1.8",
    "scipy>=1.10",
    "joblib>=1.3",
    "sqlalchemy>=2.0",
    "typer>=0.9",
    "rich>=13.0",
    "fastapi>=0.100",
    "uvicorn>=0.23",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "anyio[trio]",
]

[project.scripts]
nba-betting = "nba_betting.cli:app"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["nba_betting*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
